--- a/.github/ISSUE_TEMPLATE/new_patch_submission.yml
+++ b/.github/ISSUE_TEMPLATE/new_patch_submission.yml
@@ -1,7 +1,7 @@
 name: 提交新的汉化补丁
 description: 使用此模板提交一个新的整合包汉化补丁。
 title: "[新补丁]: <补丁名称>"
-labels: ["new-patch-submission", "enhancement"]
+labels: ["new-patch-submission"]
 body:
   - type: markdown
     attributes:
